force-app/main/default/objects/Sales_Agreement__c/Sales_Agreement__c.object-meta.xml
<CustomObject>
    <label>販売契約</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>契約番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>販売契約</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>