force-app/main/default/objects/Sales_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>顧客</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>販売契約</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>