force-app/main/default/objects/Sales_Agreement__c/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>