force-app/main/default/objects/Sales_Agreement__c/fields/Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start__c</fullName>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>