force-app/main/default/objects/Sales_Agreement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>契約概要</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>