force-app/main/default/objects/Sales_Agreement__c/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <label>獲得元商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>販売契約</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>