force-app/main/default/objects/Sales_Agreement__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <label>標準</label>
</RecordType>